# annotation-interface

./: .env  .env.testing  .gitignore  .prettierrc  LICENSE  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.mts
alembic/: env.py  script.py.mako
alembic/versions/: 046d4eb2df59_populate_annotations_and_labelkeybinds_.py  3236f48525f6_create_tasks_table_and_update_.py  80064de40646_create_annotations_and_labelkeybinds_.py  8b998e42649b_create_test_user.py  8b998e42649b_create_users.py  bbcd223554eb_create_test_task.py  fbdfefea95cd_assign_user_task.py
front/components/: bulma-element.ts  bulmaStyles.ts  faAll.ts  faSolid.ts  fontAwesome.ts  label-keybind-input.ts
front/pages/label/: label.css  label.html.jinja2  label.js
front/pages/login/: login.css  login.html.jinja2  login.js
front/pages/panel/: panel.css  panel.html.jinja2  panel.js  radial_progress_bar.html.jinja2  task_edit_modal.html.jinja2  validation.js
front/shared/scripts/: routes.js  utilities.ts
front/shared/styles/: bulma-checkbox.css  bulma.css  fontawesome-6-all.css  global.css
front/types/components/: bulma-element.d.ts  bulmaStyles.d.ts  faAll.d.ts  faSolid.d.ts  fontAwesome.d.ts  label-keybind-input.d.ts
src/app/: __main__.py  app.py
src/app/config/: __init__.py  base.py  plugin_config.py
src/app/domain/: constants.py  controllers.py  dependencies.py  models.py  repositories.py  schema.py  services.py  template_filters.py  urls.py
src/tests/: fixture_options.py  generate_fixtures.py  test_sanity.py
static/: styles.css
static/scripts/: label.js  login.js  panel.js  routes.js  validation.js
static/templates/: label.html.jinja2  login.html.jinja2  panel.html.jinja2  test.html
tests/: app_fixture.py  conftest.py  fixture_options.py  generate_fixtures.py  test_sanity.py  test_users.py
tests/integration/: test_labeling.py  test_tasks.py  test_users.py
vite_build/: utils.ts  vite-plugin-custom-jinja.ts
