[project]
name = "hfhs-annotation-interface"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sameed Khan", email = "sameed.khan@case.edu" }
]
dependencies = [
    "litestar[standard,jinja,sqlalchemy,cryptography]>=2.9.1",
    "aiosqlite>=0.20.0",
    "passlib>=1.7.4",
    "alembic>=1.13.2",
    "pytz>=2024.1",
    "ruff>=0.5.0",
    "mypy>=1.10.1",
    "pydantic>=2.8.0",
    "tzdata>=2024.1",
    "litestar-vite>=0.2.8",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
"hfhs-annotation-interface" = "hfhs_annotation_interface:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pillow>=10.4.0",
    "noise>=1.2.2",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "tqdm>=4.66.5",
    "types-tqdm>=4.66.0.20240417",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hfhs_annotation_interface"]

[tool.rye.scripts]
_litestar = "python -m src.app run --debug"
ruff = "ruff check ."
ruff-fix = "ruff check --fix ."
mypy = "mypy ."

[tool.ruff]
select = ["E", "F", "I", "N", "W", "B", "PYI", "UP", "PLC", "PLE", "PLR", "PLW"]
ignore = []
line-length = 100

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["hfhs_annotation_interface"]

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_types = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = "src"
